Created partials i.e. created a seperate header file and footer file and included them wherever required

--- a/views/users_profile.ejs
+++ b/views/users_profile.ejs
@@ -6,11 +6,12 @@
         </title>
     </head>
     <body>
-  
-        <%- include("_header"); %>      
 
-        <h1>Codieal <%= title %> </h1>
+        <%- include("_header"); %>  
+
+        <h1> USER'S PROFILE Page </h1>
 
         <%- include("_footer"); %>  
+
     </body>
 </html>
