--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,10 @@
         <title>
             <%= title %>
         </title>
+        <link rel="stylesheet" href="/css/layout.css">
+
+        <%- style %>    
+
     </head>
     <body>
   
@@ -12,5 +16,7 @@
         <%- body %>
 
         <%- include("_footer"); %>  
+
+        <%- script %> 
     </body>
 </html>
