--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,9 +1,9 @@
 <h1>Sign In</h1>
 
-<form action="users/create-session" method="POST">
+<form action="/users/create-session" method="POST">
 
     <input type="email" name="email" placeholder="Your email" required>
     <input type="password" name="password" placeholder="Your password" required>
     
-    <input type="submit" value="Sign Up">
+    <input type="submit" value="Sign In">
 </form>
