--- a/views/users_profile.ejs
+++ b/views/users_profile.ejs
@@ -1,2 +1,5 @@
 <link rel="stylesheet" href="/css/user_profile.css">
         <h1> USER'S PROFILE Page </h1>
+
+        <p> <b>Name:</b> <%= user.name %></p>
+        <p> <b>Email:</b> <%= user.email %></p>
