--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,5 +1,5 @@
 body{
     margin: 0;
-    background-color: dodgerblue;
-    text-align: center;
+    background-color: #1e90ff;
+    /* text-align: center; */
 }
