--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,3 +1,27 @@
 <header>
     page Header
+
+    <ul>
+        <!-- if the user is signed in -->
+        <% if(locals.user){ %>  
+            <li> 
+                <a href="/users/profile">
+                    <%= user.name %> 
+                </a>
+            </li>
+            <li>
+                <a href="/users/sign-out">Sign-out</a>
+            </li> 
+        <!-- if the user is not signed-in  -->
+        <% }else{ %>
+            <li>
+                <a href="/users/sign-in">Sign-In</a>
+            </li>
+
+            <li>
+                <a href="/users/sign-up">Sign-Up</a>
+            </li>
+        <% } %>
+    </ul>
+
 </header>
