installed node-sass-middleware and set it up + styles our app a little

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,5 +1,13 @@
-body{
-    margin: 0;
-    background-color: #1e90ff;
-    /* text-align: center; */
-}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+body {
+  font-family: 'Poppins', sans-serif;
+  min-height: 100vh;
+  width: 100%;
+  background-color: #f0f2f5; }
+
+#body-main {
+  min-height: 100vh; }
