--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,19 +4,29 @@
         <title>
             <%= title %>
         </title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/css/layout.css">
+
+        <link rel="stylesheet" href="/css/header.css">
+        <link rel="stylesheet" href="/css/footer.css">
 
         <%- style %>    
 
     </head>
     <body>
-  
-        <%- include("_header"); %>      
+     
+            <%- include("_header"); %>      
 
-        <%- body %>
+        <main id="body-main">
+            <%- body %>
+        </main>
+            
+        
 
-        <%- include("_footer"); %>  
+            <%- include("_footer"); %>  
 
-        <%- script %> 
+            <%- script %> 
+
     </body>
 </html>
