--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,4 +1,5 @@
-<h1>Sign In</h1>
+<div id="signin-form">
+    <h1>Sign In</h1>
 
 <form action="/users/create-session" method="POST">
 
@@ -7,3 +8,4 @@
     
     <input type="submit" value="Sign In">
 </form>
+</div>
