--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,4 +1,5 @@
-<h1>Sign Up</h1>
+<div id="signup-form">
+    <h1>Sign Up</h1>
 
 <form action="/users/create" method="POST">
     <input type="text" name="name" placeholder="Your Name" required>
@@ -7,3 +8,4 @@
     <input type="password" name="confirm_password" placeholder="confirm password" required>
     <input type="submit" value="Sign Up">
 </form>
+</div>
