--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -10,4 +10,7 @@ body {
   background-color: #f0f2f5; }
 
 #body-main {
-  min-height: 100vh; }
+  display: flex;
+  margin: auto;
+  min-height: 100vh;
+  max-width: 50vw; }
