--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -10,6 +10,10 @@ body{
     background-color: rgb(240,242,245);
 }
 #body-main{
+    display: flex;
+    margin: auto;
     min-height: 100vh;
+    max-width: 50vw;
+    
 }
 
