--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,11 +1,44 @@
-<h1>Codieal <%= title %> </h1>
+<section>
+
+</section>
+
+<section id="posts-section">
+    <h1>Codieal <%= title %> </h1>
 
 <section id="feed-posts">
-    <h4>Posts</h4>
-    <form action="/posts/create" id="new-post-form" method="POST">
-            <textarea name="content" cols="30" rows="3" placeholder="Post Here..."></textarea>
-            <input type="submit" value="Post">
-    </form>
+    <div id="post-box">
+        <h4>Posts</h4>
 
+        <% if(locals.user){ %>
+    
+        <form action="/posts/create" id="new-post-form" method="POST">
+                <textarea name="content" cols="30" rows="2" placeholder="Post Here..."></textarea>
+                <input type="submit" value="Post">
+        </form>
+    
+        <% } %>
+    </div>
+    <div id="post-list-container">
+        <ul>
+            <% for(post of posts){ %>
+                <div class="posts">
+                    <li>
+                        <p>
+                            <%= post.content %>
+                            <br>
+                            <small>
+                                <%= post.user.name %>
+                            </small>
+                        </p>
+                    </li>
+                </div>
+            <% } %>
+        </ul>
+    </div>
+</section>
+
+</section>
+
+<section>
 
 </section>
