--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,11 +25,22 @@
                     <li>
                         <p>
                             <%= post.content %>
+                            <%= post.updatedAt %>
+                            
                             <br>
                             <small>
                                 <%= post.user.name %>
                             </small>
                         </p>
+                        <div class="post-comments">
+                            <% if(locals.user){ %>
+                                <form action="/comments/create" method="POST">
+                                <input type="text" name="content" placeholder="Write a comment...">
+                                <input type="hidden" name="post" value="<%= post._id %>">
+                                <input type="submit" value="Add Comment">
+                                </form>
+                            <% } %>
+                        </div>
                     </li>
                 </div>
             <% } %>
