--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
         <% if(locals.user){ %>
     
         <form action="/posts/create" id="new-post-form" method="POST">
-                <textarea name="content" cols="30" rows="2" placeholder="Post Here..."></textarea>
+                <textarea name="content" cols="30" rows="2" placeholder="What's on your mind, <%= locals.user.name%>?" required></textarea>
                 <input type="submit" value="Post">
         </form>
     
@@ -23,23 +23,42 @@
             <% for(post of posts){ %>
                 <div class="posts">
                     <li>
-                        <p>
-                            <%= post.content %>
-                            <%= post.updatedAt %>
+                        <div class="single-post">
+                            <div class="a">
+                                <b><%= post.user.name %></b>
+                            </div>
+
+                            <div class="b">
+                                <%= post.content %>
+                            </div>
+                            <!-- <%= post.updatedAt %> -->
                             
-                            <br>
-                            <small>
-                                <%= post.user.name %>
-                            </small>
-                        </p>
+                        </div>
                         <div class="post-comments">
                             <% if(locals.user){ %>
                                 <form action="/comments/create" method="POST">
-                                <input type="text" name="content" placeholder="Write a comment...">
-                                <input type="hidden" name="post" value="<%= post._id %>">
-                                <input type="submit" value="Add Comment">
+                                <input type="text" class="comment_input" name="content" placeholder="Write a comment..." required>
+                                <input type="hidden" class="comment_input_submit" name="post" value="<%= post._id %>">
+                                <input type="submit" value="Comment">
                                 </form>
                             <% } %>
+
+                            <div class="post-comments-list">
+                                <div>
+                                    <ul id="post-comments-<%= post._id%>">
+                                        <% for(comment of post.comments){ %>
+                                            <div class="single-comment">
+                                                <div class="a">
+                                                    <b><%= comment.user.name %></b>
+                                                </div>
+                                                <div class="b">
+                                                    <%= comment.content %>  
+                                                </div> 
+                                            </div>
+                                        <% } %>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                     </li>
                 </div>
