--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,5 +1,9 @@
+#extra-links{
+    width: 20%;
+    border-right: 4px solid lightgray;
+}
 #posts-section{
-    width: 80%;
+    width: 40%;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -14,11 +18,11 @@ input[type="submit"]{
             color: white;
             background-color: rgb(36,37,38);
             border: white;
-            border-radius: 0.5rem;
+            border-radius: 0.25rem;
 }
 #post-box{
     width: 100%;
-    min-height: 4rem;
+    min-height: 6rem;
     background-color: white;
     margin: auto;
     border-radius: 0.5rem;
@@ -45,6 +49,13 @@ input[type="submit"]{
         input{
             height: 2.5rem;
         }
+        div{
+            width: 50%;
+            background-color: cadetblue;
+            // border: transparent;
+            // background-color: rgb(240,242,245);
+            // border-radius: 2rem;
+        }
     }
 }
 #post-list-container{
@@ -60,6 +71,7 @@ input[type="submit"]{
     padding: 5px;
     box-shadow: 0 1px 5px 0.5px lightgray;
     .single-post{
+        
         div{
             border-bottom: 1px solid lightgray;
             padding: 0.5rem 0;
@@ -87,6 +99,9 @@ input[type="submit"]{
                 display: flex;
                 // margin-left: -10px;
                 padding: 0.5rem 0;
+                a{
+                    color: black;
+                }
                 div{
                     padding: 0 10px;
                 }
@@ -102,4 +117,23 @@ input[type="submit"]{
     }
 }
 
+#user-friends{
+    // padding-left: 5%;
 
+    width: 20%;
+    border-left: 4px solid lightgray;
+    padding: 1.5rem 1rem 1rem 1.5rem;
+    .friends-box{
+        width: 100%;
+        margin: 2px;
+        height: 2rem; 
+        padding:0 5px;
+        display: flex;
+        align-items: center;
+    }
+    .friends-box:hover{
+        background-color: lightgray;
+        border-radius: 0.4rem;
+        
+    }
+}
