--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -11,6 +11,11 @@ body {
 
 #body-main {
   display: flex;
-  margin: auto;
-  min-height: 100vh;
-  max-width: 50vw; }
+  margin: auto; }
+  #body-main a {
+    color: black; }
+
+.pro-pic {
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 50%; }
