--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -12,8 +12,12 @@ body{
 #body-main{
     display: flex;
     margin: auto;
-    min-height: 100vh;
-    max-width: 50vw;
-    
+    a{
+        color: black;
+    }
 }
-
+.pro-pic{
+    height:1.5rem;
+    width:1.5rem;
+    border-radius: 50%;
+}
