--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -13,7 +13,7 @@
             <!-- if the user is signed in -->
             <% if(locals.user){ %>  
                 <li> 
-                    <a href="/users/profile">
+                    <a href="/users/profile/<%= user.id %>">
                         <%= user.name %> 
                     </a>
                 </li>
