--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,5 @@
-<section>
+<link rel="stylesheet" href="/css/home.css">
+<section id="extra-links">
 
 </section>
 
@@ -11,8 +12,11 @@
 
         <% if(locals.user){ %>
     
-        <form action="/posts/create" id="new-post-form" method="POST">
-                <textarea name="content" cols="30" rows="2" placeholder="What's on your mind, <%= locals.user.name%>?" required></textarea>
+        <form action="/posts/create" id="new-post-form" enctype="multipart/form-data" method="POST">
+                <textarea id="post-i" name="content" cols="30" rows="2" placeholder="What's on your mind, <%= locals.user.name%>?" required></textarea>
+                <div id="pposts">
+                    <input type="file" name="ppost" placeholder="Photo">
+                </div>
                 <input type="submit" value="Post">
         </form>
     
@@ -20,55 +24,29 @@
     </div>
     <div id="post-list-container">
         <ul>
-            <% for(post of posts){ %>
-                <div class="posts">
-                    <li>
-                        <div class="single-post">
-                            <div class="a">
-                                <b><%= post.user.name %></b>
-                            </div>
-
-                            <div class="b">
-                                <%= post.content %>
-                            </div>
-                            <!-- <%= post.updatedAt %> -->
-                            
-                        </div>
-                        <div class="post-comments">
-                            <% if(locals.user){ %>
-                                <form action="/comments/create" method="POST">
-                                <input type="text" class="comment_input" name="content" placeholder="Write a comment..." required>
-                                <input type="hidden" class="comment_input_submit" name="post" value="<%= post._id %>">
-                                <input type="submit" value="Comment">
-                                </form>
-                            <% } %>
-
-                            <div class="post-comments-list">
-                                <div>
-                                    <ul id="post-comments-<%= post._id%>">
-                                        <% for(comment of post.comments){ %>
-                                            <div class="single-comment">
-                                                <div class="a">
-                                                    <b><%= comment.user.name %></b>
-                                                </div>
-                                                <div class="b">
-                                                    <%= comment.content %>  
-                                                </div> 
-                                            </div>
-                                        <% } %>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </li>
-                </div>
-            <% } %>
+            
+                <% for(post of posts){ %>
+                    <%- include("_post") -%>
+                <% } %>
+            
         </ul>
     </div>
 </section>
-
 </section>
 
-<section>
-
+<section id="user-friends">
+    <div>
+        <h3>Friends</h3>
+        <% for(u of all_users){ %>
+            <div class="friends-box">
+                <a href="/users/profile/<%= u.id %>">
+                    <%= u.name %>
+                </a>
+            </div>
+        <% } %>
+    </div>
 </section>
+<!-- importing this script for creating the comments -->
+<script src="/js/home_post_comments.js" ></script>
+<script src="/js/home_posts.js"></script>
+
