--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,20 +4,26 @@
         <title>
             <%= title %>
         </title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@mojs/core"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/css/layout.css">
 
         <link rel="stylesheet" href="/css/header.css">
         <link rel="stylesheet" href="/css/footer.css">
-        <link rel="stylesheet" href="/css/home.css">
+        
 
         <%- style %>    
 
     </head>
     <body>
      
-            <%- include("_header"); %>      
+            <%- include("_header"); %>   
+            
+            
 
         <main id="body-main">
             <%- body %>
@@ -28,6 +34,32 @@
             <%- include("_footer"); %>  
 
             <%- script %> 
+
+            <script>
+                
+                <% if (flash.success && flash.success.length > 0) {%>
+                    new Noty({
+                        theme: 'relax',
+                        text: "<%= flash.success %>",
+                        type: 'success',
+                        layout: 'topRight',
+                        timeout: 1500,
+                        
+                    }).show();    
+                <%} %>
+
+                <% if (flash.error && flash.error.length > 0) {%>
+                    new Noty({
+                        theme: 'relax',
+                        text: "<%= flash.error %>",
+                        type: 'error',
+                        layout: 'topRight',
+                        timeout: 1500
+                        
+                    }).show();    
+                <%} %>
+
+            </script>
 
     </body>
 </html>
