--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -20,6 +20,8 @@
             
         </div>
         <div class="post-file">
+            <img src="<%= post.pposts %>" alt="" />
+            <br>
             
         </div>
         <div class="post-comments">
