--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,7 +11,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/css/layout.css">
-
+        <script src="https://kit.fontawesome.com/cab1f70329.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="/css/header.css">
         <link rel="stylesheet" href="/css/footer.css">
         
