--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -26,7 +26,7 @@ input[type="submit"]{
     background-color: white;
     margin: auto;
     border-radius: 0.5rem;
-    box-shadow: 0 1px 5px 0.5px grey;
+    box-shadow: 0 2px 5px 0.5px lightgrey;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -77,8 +77,21 @@ input[type="submit"]{
             padding: 0.5rem 0;
         }
         .a{
+            
+            padding-left: 0.5rem;
             text-transform: capitalize;
+            box-shadow: 0 1px 2px 0.25px grey;
+            border-radius: 0.2rem;
         }
+    }
+    .post-file{
+        display: flex;
+        padding: 0.5rem 0;
+        img{
+            height: 100%;
+            width: 100%;
+        }
+        border-bottom: 1px solid lightgray;
     }
     .post-comments{
         form{
@@ -89,6 +102,7 @@ input[type="submit"]{
                 width: 70%;
                 height: 2rem;
                 background-color: rgb(240,242,245);
+                box-shadow: 0 1px 5px 0.5px grey;
                 border-radius: 2rem;
                 border: transparent;     
                 padding-left: 10px;
