--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -1,3 +1,8 @@
+<link rel="stylesheet" href="/css/sign-in.css">
+<p class="sign__word">Welcome back!!!</p>
+<div class="center-image">
+    <img src="https://fcit.usf.edu/matrix/wp-content/uploads/2017/01/DanceBot-3-LG.gif" alt="Welcome back!!">
+</div>
 <div id="signin-form">
     <h1>Sign In</h1>
 
@@ -8,4 +13,10 @@
     
     <input type="submit" value="Sign In">
 </form>
+<a href="/users/auth/google">
+<div class="gmail">
+    
+     <i class="fab fa-google-plus-g"></i>
+</div>
+</a>
 </div>
