--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -1,3 +1,8 @@
+<link rel="stylesheet" href="/css/sign-in.css">
+<p class="sign__word">Welcome back!!!</p>
+<div class="center-image">
+    <img src="https://fcit.usf.edu/matrix/wp-content/uploads/2017/01/DanceBot-3-LG.gif" alt="Welcome back!!">
+</div>
 <div id="signup-form">
     <h1>Sign Up</h1>
 
@@ -8,4 +13,9 @@
     <input type="password" name="confirm_password" placeholder="confirm password" required>
     <input type="submit" value="Sign Up">
 </form>
+<a href="/users/auth/google">
+<div class="gmail">
+    <i class="fab fa-google-plus-g"></i>
+</div>
+</a>
 </div>
