--- a/views/user_sign_up.ejs
+++ b/views/user_sign_up.ejs
@@ -14,8 +14,10 @@
     <input type="submit" value="Sign Up">
 </form>
 <a href="/users/auth/google">
-<div class="gmail">
-    <i class="fab fa-google-plus-g"></i>
-</div>
+    <div class="gmail">
+        <img src="https://cdn.worldvectorlogo.com/logos/google-icon.svg" alt="Google Sign-Up">
+        <!-- <i class="fab fa-google-plus-g"></i> -->
+    </div>
 </a>
+
 </div>
