--- a/assets/scss/sign-in.scss
+++ b/assets/scss/sign-in.scss
@@ -83,7 +83,7 @@
         flex-direction: column;
         align-items: center;
         position: absolute;
-        top: 30%;
+        top: 28%;
         left: 55%;
         padding: 10px;
         form{
@@ -115,15 +115,34 @@
         .gmail{
             height: 2rem;
             width: 18rem;
-            background-color:rgb(255,0,0);
+            background-color:black;
             border-radius: 0.5rem;
             box-shadow: 0 1px 5px 0.5px grey;
             text-align: center;
-            color: white;
+            // color: white;
             margin-bottom: 5%;
+            img{
+                width:1.4rem;
+                height: 1.4rem;
+            }
         }
         .gmail:hover{
-            background-color:  rgb(234,67,53);
+            background-color:  rgb(36,37,38);
+            animation: neon .08s ease-in-out infinite alternate;
+        }
+        .forgot-pass-btn{
+            height: 2rem;
+            width: 18rem;
+            background-color:rgb(163,207,232);
+            border-radius: 0.5rem;
+            box-shadow: 0 1px 5px 0.5px grey;
+            text-align: center;
+            font-size: 1.3rem;
+            color: black;
+            margin-bottom: 5%;
+        }
+        .forgot-pass-btn:hover{
+            background-color:  rgb(57,147,181);
             animation: neon .08s ease-in-out infinite alternate;
         }
     }
