--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -10,11 +10,23 @@
     <div class="b">
         
         <%= comment.content %>  
-        
+       
     </div> 
     <div>
-        <% if(locals.user && locals.user.id == comment.user.id){ %>
+        <% if(locals.user && locals.user.id == comment.user._id){ %>
+
             <a class="delete-comment-button" href="/comments/destroy/<%= comment.id %>">X</a>
         <% } %>
+    </div>
+    <div>
+    
+        <% if (locals.user){ %>
+            <a class="toggle-like-button" data-likes="<%= comment.likes.length %>" href="/likes/toggle/?id=<%=comment._id%>&type=Comment">
+                    <%= comment.likes.length %> Likes
+            </a>
+        <% }else{ %>
+            <%= comment.likes.length %> Likes
+        <% } %>
+        
     </div>
 </div>
