--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -14,9 +14,14 @@
     <input type="submit" value="Sign In">
 </form>
 <a href="/users/auth/google">
-<div class="gmail">
-    
-     <i class="fab fa-google-plus-g"></i>
+<div class="gmail">   
+    <img src="https://cdn.worldvectorlogo.com/logos/google-icon.svg" alt="Google Sign-In">
+     <!-- <i class="fab fa-google-plus-g"></i> -->
 </div>
+</a>
+<a href="/users/reset-password">
+    <div class="forgot-pass-btn">
+        Forgot Password?
+    </div>
 </a>
 </div>
